# kraken-scalper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  RESEARCH_STATUS.md  fly.toml  railway.toml
config/: default.toml
migrations/: 001_initial.sql
models/: btc_retracement.joblib
scripts/: ai_advisor.py  analyze_hf_continuity.py  breakout_grid.py  hf_init.py  hf_upload.py  ml_analysis.py  requirements-ml.txt  retracement_grid.py  simulate_3month_merge.py  test_xstocks.py  visualize_data_merge.py  visualize_merge_strategy.py
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs  models.rs  rest.rs  websocket.rs
src/backtest/: comparator.rs  engine.rs  loader.rs  metrics.rs  mod.rs
src/config/: mod.rs
src/data/: candles.rs  mod.rs  orderbook.rs  ticker.rs
src/storage/: hf_uploader.rs  kraken_ohlc.rs  mod.rs  mongo.rs  recorder.rs  sqlite.rs
src/strategy/: base.rs  breakout.rs  indicators.rs  mean_reversion.rs  mod.rs  registry.rs  rsi.rs  scalper.rs  trend_following.rs
src/trading/: engine.rs  live.rs  mod.rs  order.rs  paper.rs
src/ui/: app.rs  charts.rs  input.rs  mod.rs
src/ui/dialogs/: confirm.rs  help.rs  mod.rs  order.rs
src/ui/views/: history.rs  mod.rs  portfolio.rs  trading.rs
src/ui/widgets/: ai_advisor.rs  mod.rs  orderbook.rs  positions.rs  status.rs  trades.rs
