[package]
name = "scalper"
version = "0.1.0"
edition = "2021"
description = "Kraken scalping bot with terminal UI"
authors = ["chocos"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
mongodb = "3.1"

# Configuration
config = "0.14"
dotenvy = "0.15"
home = "=0.5.9"  # Pin to avoid edition2024 requirement
base64ct = "=1.6.0"  # Pin to avoid edition2024 requirement

# Crypto / Auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Numbers with precision
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# URL handling
url = "2"

# Data recording (Parquet)
parquet = "54"
arrow = "54"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "scalper"
path = "src/main.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "hf_sync"
path = "src/bin/hf_sync.rs"

[profile.release]
opt-level = 3
lto = true
